ghc-4335c07/testsuite/tests/ghci/prog009/ghci.prog009.stderr

A.hs:1:16: error: parse error on input ‘where’

<interactive>:25:1: error:
    • Variable not in scope: yan
    • Perhaps you meant ‘tan’ (imported from Prelude)

A.hs:1:16: error: parse error on input ‘where’
