ghc-4335c07/testsuite/tests/ghci/prog009/ghci.prog009.T
test('ghci.prog009', [extra_files(['A1.hs', 'A2.hs', 'A3.hs', 'B.hs'])], ghci_script, ['ghci.prog009.script'])
